Update checkpoint status

--- a/analysis/2017-11-09-creating-maps-with-coastlines.Rmd
+++ b/analysis/2017-11-09-creating-maps-with-coastlines.Rmd
@@ -18,7 +18,7 @@ slug: creating-maps-coastlines
 user_name <- "fzenoni" # your Git username (only needed if
 # you want to deploy to GH pages)
 project_name <- "coast-map" # adapt!
-package_date <- "2017-11-09" # date of the CRAN snapshot that
+package_date <- "2018-01-10" # date of the CRAN snapshot that
 # the checkpoint package uses
 ```
 
@@ -70,18 +70,21 @@ if(Sys.info()['sysname'] == 'Windows') {
   cat("
 library(dplyr)
 library(osmdata)
-library(sf)
+library(ggplot2)
 library(knitr)
+library(sf)
 library(tmap)
 library(lwgeom)",
     file = "manifest.R")
 } else {
   cat("
 library(dplyr)
+library(ggplot2)
+library(knitr)
 library(osmdata)
 library(sf)
-library(knitr)
-library(tmap)",
+library(tmap)
+library(lwgeom)",
     file = "manifest.R")
 }
 ```
